test/classes/errors/nilability-init-var/init-var-oknil-owned-from-oknil-shared.good
init-var-oknil-owned-from-oknil-shared.chpl:9: error: cannot create an owned variable from a shared class instance
